@@ -3,6 +3,8 @@ CHANGES.txt - 09/15/2005
 
 CHANGES IN CUPS V1.2.0b1
 
+	- The cupstestppd program now flags bad Resolution
+	  options (STR #1269)
 	- The USB backend now retries printing when the printer
 	  is disconnected or turned off (STR #1267)
 	- Added new httpGetHostname() function to CUPS API, and
